2011-06-30 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* transferfunctions: changing TFs for MET. Now parametrized as function of SumET. Removed all old TFs. Only MC10b supported
	* InterfaceD3PD: add SumET, switch to new MET variables, switch off input branches which are not needed
	* DetectorAtlas_7TeV.cxx: new TFs for MET implemented (Gauss_MET)
	* several classes: SumET added, needed as a MET TF parameter
	* Permutations: small memory leak fixed
	* tag KLFitter-00-04-21

2011-06-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* InterfaceD3PD: bugfix for mcevt_weight
	* tag KLFitter-00-04-20

2011-06-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* InterfaceD3PD: changing var type for mc10b
    - mcevt_weight: vector<vector<double> >
    - jet_flavor_weight_SV0 : vector<float>
	* tag KLFitter-00-04-19: This tag is broken! Don't use it!

2011-06-08 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* transferfunctions:
    -mc10a: optimized TFs with higher statistics due to other top mass sample -> fixed bJet TFs in crack region
    -mc10b: new TFs, including top mass samples and muon smearing
	* DetectorAtlas_7TeV.cxx: re-introduce crack region for jets
	* runKLFitter.cxx: Move to new mc10b TFs
	* tag KLFitter-00-04-18

2011-06-07 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* transferfunctions: fixed Electron TFs, bJet TFs in crack region still not good
	* DetectorAtlas_7TeV.cxx: Temporary fix for bJets in crack region: Interpolating with other regions
	* runKLFitter.cxx: Move to new mc10a TFs
	* tag KLFitter-00-04-17

2011-05-18 Johannes Erdmann <johannes.erdmann@cern.ch>, Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* Permutations, SelectionTool, InterfaceD3PD: bug fix for Particles::JetIndex
	* InterfaceD3PD: default is Herwig
	* clean-up
	* tag KLFitter-00-04-16
	* new structure in transferfunctions for mc10/a/b